# FLNDP-Healthcare-Facility-Location

./: CMakeLists.txt  cplex.cmake
input_data/: Instance_1.txt
src/: Instance.cpp  Instance.h  MipModel.cpp  MipModel.h  main.cpp
